add tests and transformer

--- a/ml_project/notebooks/2_GenerateTestData.ipynb
+++ b/ml_project/notebooks/2_GenerateTestData.ipynb
@@ -2,20 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a50bce04-9012-48ba-8811-46f1bf65b2d4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "from functools import partial\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8691d78d-bfc9-4bcd-b50c-5e11ec017077",
    "metadata": {},
    "outputs": [],
@@ -25,19 +28,501 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "259e59bb-447f-40d4-8ab1-79af4fdb21e7",
+   "execution_count": 5,
+   "id": "86075ef1-46f2-4eaa-94c4-89a3167b0667",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>condition</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>160</td>\n",
+       "      <td>234</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>239</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>151</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>226</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>138</td>\n",
+       "      <td>282</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>211</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>144</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+       "0   69    1   0       160   234    1        2      131      0      0.1      1   \n",
+       "1   69    0   0       140   239    0        0      151      0      1.8      0   \n",
+       "2   66    0   0       150   226    0        0      114      0      2.6      2   \n",
+       "3   65    1   0       138   282    1        2      174      0      1.4      1   \n",
+       "4   64    1   0       110   211    0        2      144      1      1.8      1   \n",
+       "\n",
+       "   ca  thal  condition  \n",
+       "0   1     0          0  \n",
+       "1   2     0          0  \n",
+       "2   0     0          0  \n",
+       "3   1     0          1  \n",
+       "4   0     0          0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f8e5df6a-5fc5-4759-aa6c-768d9cf3eb9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age            int64\n",
+       "sex            int64\n",
+       "cp             int64\n",
+       "trestbps       int64\n",
+       "chol           int64\n",
+       "fbs            int64\n",
+       "restecg        int64\n",
+       "thalach        int64\n",
+       "exang          int64\n",
+       "oldpeak      float64\n",
+       "slope          int64\n",
+       "ca             int64\n",
+       "thal           int64\n",
+       "condition      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f998074e-2e3f-4bc0-bec6-3cf238462501",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>oldpeak</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>297.000000</td>\n",
+       "      <td>297.000000</td>\n",
+       "      <td>297.000000</td>\n",
+       "      <td>297.000000</td>\n",
+       "      <td>297.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>54.542088</td>\n",
+       "      <td>131.693603</td>\n",
+       "      <td>247.350168</td>\n",
+       "      <td>149.599327</td>\n",
+       "      <td>1.055556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.049736</td>\n",
+       "      <td>17.762806</td>\n",
+       "      <td>51.997583</td>\n",
+       "      <td>22.941562</td>\n",
+       "      <td>1.166123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>211.000000</td>\n",
+       "      <td>133.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>130.000000</td>\n",
+       "      <td>243.000000</td>\n",
+       "      <td>153.000000</td>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>276.000000</td>\n",
+       "      <td>166.000000</td>\n",
+       "      <td>1.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>564.000000</td>\n",
+       "      <td>202.000000</td>\n",
+       "      <td>6.200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              age    trestbps        chol     thalach     oldpeak\n",
+       "count  297.000000  297.000000  297.000000  297.000000  297.000000\n",
+       "mean    54.542088  131.693603  247.350168  149.599327    1.055556\n",
+       "std      9.049736   17.762806   51.997583   22.941562    1.166123\n",
+       "min     29.000000   94.000000  126.000000   71.000000    0.000000\n",
+       "25%     48.000000  120.000000  211.000000  133.000000    0.000000\n",
+       "50%     56.000000  130.000000  243.000000  153.000000    0.800000\n",
+       "75%     61.000000  140.000000  276.000000  166.000000    1.600000\n",
+       "max     77.000000  200.000000  564.000000  202.000000    6.200000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['age', 'trestbps', 'chol', 'thalach', 'oldpeak']].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "540c8c4a-3f80-4507-ae06-f2033f03dc41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = df['condition'].values\n",
+    "X = df.drop(columns=['condition']).values\n",
+    "\n",
+    "neigh = KNeighborsClassifier(n_neighbors=3)\n",
+    "neigh.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "eaa14cfa-bd2e-4a41-bf3b-30cdee892449",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = df['condition'].values\n",
-    "X = df.drop(columns=['condition']).values"
+    "def generate_item():\n",
+    "    age = random.randint(29, 77)\n",
+    "    sex = random.randint(0, 1)\n",
+    "    cp = random.randint(0, 3)\n",
+    "    trestbps = random.randint(94, 200)\n",
+    "    chol = random.randint(126, 564)\n",
+    "    fbs = random.randint(0, 1)\n",
+    "    restecg = random.randint(0, 2)\n",
+    "    thalach = random.randint(7, 202)\n",
+    "    exang = random.randint(0, 1)\n",
+    "    oldpeak = random.randint(0, 62)/10\n",
+    "    slope = random.randint(0, 3)\n",
+    "    ca = random.randint(0, 4)\n",
+    "    thal = random.randint(0, 3)\n",
+    "    \n",
+    "    x = [age, sex, cp, trestbps, chol, fbs, restecg, thalach, exang, oldpeak, slope, ca, thal]\n",
+    "    \n",
+    "    class_ = neigh.predict(np.array(x).reshape(1, -1))\n",
+    "    x.append(class_[0])\n",
+    "    return np.array(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "687238f5-1ab2-4a06-aec1-d94c0f0edf47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = []\n",
+    "for i in range(500):\n",
+    "    data.append(generate_item())\n",
+    "data = np.vstack(data)\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "01bffccf-4939-419b-add2-862dc2b87aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age            int64\n",
+       "sex            int64\n",
+       "cp             int64\n",
+       "trestbps       int64\n",
+       "chol           int64\n",
+       "fbs            int64\n",
+       "restecg        int64\n",
+       "thalach        int64\n",
+       "exang          int64\n",
+       "oldpeak      float64\n",
+       "slope          int64\n",
+       "ca             int64\n",
+       "thal           int64\n",
+       "condition      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df = pd.DataFrame(data, columns=df.columns)\n",
+    "test_df[['age', 'sex', 'cp', 'trestbps', 'chol', 'fbs', 'restecg', 'thalach', 'exang', 'slope', 'ca', 'thal', 'condition']]\\\n",
+    "    = test_df[['age', 'sex', 'cp', 'trestbps', 'chol', 'fbs', 'restecg', 'thalach', 'exang', 'slope', 'ca', 'thal', 'condition']].astype(\"int64\")\n",
+    "test_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6399d537-bf85-44cd-90fc-5231b19be8ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df.to_csv(\"../data/test_generated_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "b6ba3ea7-5a50-4200-ad0e-54507184a3d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.random.binomial(1, 0.8, size=(10, 14))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "03a4f3d9-cba3-43ec-bf5f-e950677c3ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22857142857142856"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a==0].shape[0] / (a.shape[0]*a.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "ef6d36a9-f89e-4490-a6c1-9eda120fd2ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(a.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01bffccf-4939-419b-add2-862dc2b87aad",
+   "id": "d9f4bd4b-aba8-40bf-bbed-b676ec1a67a3",
    "metadata": {},
    "outputs": [],
    "source": []
